src/assets/stylesheets/application.scss
@import "settings/__settings";
@import "util/__util";
@import "components/__components";
@import "pages/__pages";

* {
  box-sizing: border-box;
}

body {
  font-family: $font-default;
  padding: 0;
  margin: 0;
  background: $dark;
  color: $white-text;
  font-weight: 300;
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
p {
  margin: 0;
  font-weight: 100;
}

h2 {
  font-size: 2.5rem;
}

strong {
  font-weight: 600;
}

.wrapper {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

main {
  display: flex;
  flex-direction: column;
  flex-grow: 2;
  padding: 0.5rem 0;
}

